upload and modifiers

--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --forceExit",
     "dev": "tsx watch ./src/main.ts"
+  },
+  "engines": {
+    "node": "20"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.1.3",
+    "multer": "^1.4.5-lts.1"
   }
 }
