--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.11",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "express": "^4.18.2",
     "mongoose": "^8.1.3",
     "multer": "^1.4.5-lts.1"
