--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.1.3",
     "multer": "^1.4.5-lts.1"
