--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.11",
+    "dotenv": "^16.4.5",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   },
