--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev": "tsx watch ./src/main.ts"
+    "dev": "tsx watch ./src/main.ts",
+    "build": "tsup src"
   },
   "engines": {
     "node": "20"
@@ -15,16 +16,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
+    "@types/nodemailer": "^6.4.15",
     "dotenv": "^16.4.5",
+    "tsup": "^8.1.0",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -32,7 +35,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
     "multer": "^1.4.5-lts.1",
-    "pdfkit": "^0.15.0",
+    "nodemailer": "^6.9.14",
+    "pdf-lib": "^1.17.1",
     "xlsx": "^0.18.5"
   }
 }
