--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "pdf-lib": "^1.17.1",
+    "prisma": "^5.19.1",
     "xlsx": "^0.18.5"
   }
 }
