--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.15",
+    "@types/qrcode": "^1.5.5",
     "dotenv": "^16.4.5",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3"
@@ -38,6 +39,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "pdf-lib": "^1.17.1",
+    "qrcode": "^1.5.4",
     "xlsx": "^0.18.5"
   }
 }
