--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mongoose": "^8.1.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
+    "numero-por-extenso": "^1.0.8",
     "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
     "xlsx": "^0.18.5"
